stable/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: kibana
  namespace: efk
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - backend:
              #serviceName: kibana.efk.svc
              serviceName: kibana
              servicePort: 5601
            #path: /
            path: /app/kibana
